feat: Create app announcements

--- a/django_study/Makefile
+++ b/django_study/Makefile
@@ -1,42 +1,38 @@
 VENV_NAME = .venv
 PYTHON = $(VENV_NAME)/Scripts/python
 
-
-# VENV_INIT = $(VENV_NAME)/Scripts/Activate
-
-
 setup: 
 	@echo "Ambiente virtual pronto.
 	python -m venv $(VENV_NAME)
-	python -m pip install --upgrade pip
-	pip install -r blog/requirements.txt
+
+init:
+	$(PYTHON) -m pip install --upgrade pip
+	pip install -r requirements.txt
 
 run:
-	python manage.py runserver
-	
+	$(PYTHON) manage.py runserver
+
 # Cria a estrutura do projeto
 startapp:
-	@echo "Creating Django app: $(APP_NAME)"
-	$(PYTHON) manage.py startapp $(APP_NAME)
-	@echo "Moving $(APP_NAME) to blog folder..."
-	move $(APP_NAME) blog/
+	@echo "Creating Django app: $(app-name)"
+	$(PYTHON) manage.py startapp $(app-name)
 
 # Roda as migrations do projeto
 migrate:
-	python manage.py migrate
+	$(PYTHON) manage.py migrate
 	@echo "Migrate finsh"
 
 # Cria as migrations com base nas models ou alteração delas
 migrations:
-	python manage.py makemigrations $(app-name)
+	$(PYTHON) manage.py makemigrations $(app-name)
 
 # Antes de executar as migrations, mostra o slq
 sqlmigration:
-	python manage.py sqlmigrate polls $(version)
+	$(PYTHON) manage.py sqlmigrate polls $(version)
 
 shell:
-	python manage.py shell
+	$(PYTHON) manage.py shell
 
 creatadmin:
-	python manage.py createsuperuser
+	$(PYTHON) manage.py createsuperuser
 
