feat: manipulating files for makefile use

--- a/django_blog/Makefile
+++ b/django_blog/Makefile
@@ -10,7 +10,7 @@ init:
 	pip install -r requirements.txt
 
 startproject:
-	python startproject project .
+	python -m django startproject project
 
 run:
 	$(PYTHON) manage.py runserver
