--- a/django_blog/.env.example
+++ b/django_blog/.env.example
@@ -1,10 +1,9 @@
+DEBUG=False
+
 SECRET_KEY="CHANGE-ME"
 
-# 0 False, 1 True
-DEBUG="1"
-
 # Comma Separated values
-ALLOWED_HOSTS="127.0.0.1, localhost"
+ALLOWED_HOSTS='["127.0.0.1", "localhost"]'
 
 DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="CHANGE-ME"
