--- a/.github/workflows/ci-blog.yml
+++ b/.github/workflows/ci-blog.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-    #   - name: Set up Python
-    #     uses: actions/setup-python@v5
-    #     with:
-    #       python-version: '3.9' # Defina a versão do Python que seu Django usa
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
 
     #   - name: Install dependencies
     #     run: |
