--- a/.github/workflows/ci-blog.yml
+++ b/.github/workflows/ci-blog.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -23,26 +23,24 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name: Install dependencies
+      - name: Set up Environment
+        run: |
+          cp .env.example .env
+
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r django_blog/requirements-dev.txt
 
+      - name: Formater
+        run: make fmt
 
-    #   - name: Configure Environment Variables
-    #     run: |
-    #       echo "DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }}" >> $GITHUB_ENV
-    #       echo "DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" >> $GITHUB_ENV
-    #       echo "DJANGO_DEBUG=${{ secrets.DJANGO_DEBUG }}" >> $GITHUB_ENV
-    #       # Adicione qualquer outra variável de ambiente que seu Django precise
-    #       # Por exemplo, se você usa DATABASE_URL:
-    #       # echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
-    #     # Nota: Não exponha variáveis sensíveis diretamente nos logs.
-    #     # ${{ secrets.NOME_DA_SECRETA }} garante que elas sejam injetadas de forma segura.
+      - name: Linter
+        run: echo "todo"
 
-    #   - name: Run Django Checks
-    #     run: |
-    #       python manage.py check # Roda as checagens básicas do Django
+      - name: System Checks
+        run: |
+          python manage.py check # Roda as checagens básicas do Django
 
     #   - name: Run Django Migrations (Dry Run)
     #     # É uma boa prática fazer um dry run das migrações para garantir que não há problemas
