fix: make clean code

--- a/django_blog/.env.example
+++ b/django_blog/.env.example
@@ -1,9 +1,6 @@
 DEBUG=False
-
 SECRET_KEY="CHANGE-ME"
-
-# Comma Separated values
-ALLOWED_HOSTS='["127.0.0.1", "localhost"]'
+ALLOWED_HOSTS=localhost,127.0.0.1
 
 DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="CHANGE-ME"
