--- a/django_blog/ruff.toml
+++ b/django_blog/ruff.toml
@@ -18,3 +18,5 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 docstring-code-format = true
 docstring-code-line-length = "dynamic"
+
+#TODO: Remover imports não usados 
