--- a/django_blog/.coveragerc
+++ b/django_blog/.coveragerc
@@ -14,6 +14,8 @@ omit =
     */asgi.py
     manage.py
     *tests.py
+    *requirements.txt
+    *requirements-dev.txt
 plugins =
     django_coverage_plugin
 
